<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_demiss"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/hui6">

        <TextView
            android:id="@+id/tv_fenxiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/fenxaingdao"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/rl_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fenxiang"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_pengyouquan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_friends" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_below="@id/img_pengyouquan"
                    android:gravity="center"
                    android:text="@string/pengyouquan"
                    android:textColor="@color/hui5"
                    android:textSize="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_weixin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weixin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/wechat_friend"
                    android:textColor="@color/hui5"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_weibo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_weibo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/sina"
                    android:textColor="@color/hui5"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_qq" />

                <TextView
                    android:id="@+id/t"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/qq_friend"
                    android:textColor="@color/hui5"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_qz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_q_zone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/qq_z"
                    android:textColor="@color/hui5"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rl_share"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/x_cancel"
            android:textColor="@color/black"
            android:textSize="14dp" />
    </RelativeLayout>

</RelativeLayout>
