<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_mingcheng"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/diqu_hangye_name"
            android:textColor="@color/hui2"
            android:textSize="12dp"

            />

        <TextView
            android:id="@+id/tv_shuliang"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/tv_mingcheng"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:text="@string/diqu_guapai_count"
            android:textColor="@color/hui2"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_zhanbi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_shuliang"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:text="@string/diqu_n_proportion"
            android:textColor="@color/hui2"
            android:textSize="12dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hui" />

</LinearLayout>